add feature randomizing, scoring, custom end screen
